--- a/package.json
+++ b/package.json
@@ -6,22 +6,28 @@
   "scripts": {
     "start": "tsnd --respawn index.ts",
     "build": "tsc",
-    "test": "ts-jest"
+    "test": "jest",
+    "test:unit": "jest -t 'Unit - '",
+    "test:int": "jest -t 'Int - '"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "knex": "^2.5.1",
     "mysql2": "^3.6.1",
-    "ts-jest": "^29.1.1"
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.5",
     "@types/knex": "^0.16.1",
     "@types/node": "^20.6.0",
+    "@types/supertest": "^2.0.12",
     "jest": "^29.7.0",
+    "knex": "^2.5.1",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
+    "ts-node-register": "^1.0.0",
     "tsc": "^2.0.4",
     "typescript": "^5.2.2"
   }
