--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,13 @@
 {
   "compilerOptions": {
+    "target": "ES6",
+    "module": "CommonJS",
     "outDir": "./dist",
-    "allowJs": true,
-    "target": "es5",
-    "skipLibCheck": true,
+    "rootDir": "./src",
+    "strict": true,
     "esModuleInterop": true,
-    "strict": true
+    "skipLibCheck": true
   },
-  "include": ["./src/**/*"],
-  "exclude": ["node_modules"],
-
-  
-} 
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules"]
+}
